# ylab-common-scripts

./: .gitignore  README.md  env_common_fix.sh  pyproject.toml  setup.py
src/ylabcommon/: __init__.py  run_process_with_gdrive.py
src/ylabcommon/analysis/: crawler.py  crawler_test.py
src/ylabcommon/bioio/: base_params_adapter.py  bioio_reader.py  bioio_writer.py  keyence_bioio_stack_builder.py  keyence_metadata_extractor.py  metadata_extractor_base.py  thorlab_bioio_stack_builder.py  thorlab_metadata_extractor.py  thorlab_params_adapter.py
src/ylabcommon/bioio/core/: bioio_reader.py  bioio_writer.py
src/ylabcommon/bioio/keyence/: keyence_bioio_stack_builder.py  keyence_metadata_extractor.py  keyence_metainfo.py  keyence_params_adapter.py  keyence_stich_files.py
src/ylabcommon/bioio/thorlab/: builder.py  run_bioio_process_experiment.py  thorlab_bioio_stack_builder.py  thorlab_metadata_extractor.py  thorlab_params_adapter.py  thorlab_unified_metadata.py  xml_parser.py
src/ylabcommon/diagnostics/: fix_env.sh
src/ylabcommon/io/: file_selection.py  outfile_name.py  output_build_dir.py  summary_metadata_helper.py
src/ylabcommon/models/: plan.py
src/ylabcommon/models/parameters/: behavior.py
src/ylabcommon/parser/: keyence_parser.py
src/ylabcommon/utils/: '  __init__.py  betterstack_log.py  data_validation.py  data_validation_test.py  file_util.py  infile_experiment_loader.py  matplot_util.py  normalize_bioImage.py  outfile_name.py  pd_util.py  pd_util_test.py  report_builder.py  resultVisualiser.py  util_download_drive_folder.py  utils.py
tests/: conftest.py  pytest.ini  test_build_output_name.py  test_dlc_bodyparts.py  test_fake_generator_fixture.py  test_gdrive_download.py  test_integration_gdrive_common.py  test_integration_local_common.py  test_metadata.py  test_metadata_extraction.py  test_plan.py  test_reader.py  test_report_builder.py  test_stack_builder.py  test_thorlab_short_t_tolerance.py  test_unit_common_builder.py  test_validation.py  test_writer.py  test_zip_helper.py
ylabcommon/: __init__.py  file_util.py  file_util_test.py  matplot_format.py  matplot_util.py  matplot_util_test.py  pd_util.py  util.py  util_test.py
ylabcommon/analysis/: crawler.py  crawler_test.py
ylabcommon/models/parameters/: analysis_behavior.py  analysis_behavior_test.py  behavior.py  general.py
