[project]
name = "ylabcommon"
version = "0.2.2"
description = "Integrated pipeline system for MRI data analysis - Automated preprocessing, analysis tasks (DSI/VBM/FreeSurfer), and model training"
readme = "README.md"
requires-python = "===3.12.9"
dependencies = [
    "h5py>=3.15.1",
    "matplotlib>=3.7.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "gdown>=5.0.0",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "python-dotenv>=1.2.1",
]
license = {text = "MIT"}

[optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling","setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ylabcommon",
]
